[package]
name = "cbors"
version = "0.1.2"
authors = ["Maxwell Koo <mjkoo90@gmail.com>"]
edition = "2018"
homepage = "https://github.com/mjkoo/cbors"
readme = "README.md"
license = "MIT"
keywords = ["cbor", "serialization", "deserialization", "python"]
description = "A Python CBOR (de)serialization module, powered by Rust"

[badges]
travis-ci = { repository = "mjkoo/cbors", branch = "master" }
codecov = { repository = "mjkoo/cbors", branch = "master" }

[lib]
name = "cbors"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.7.0-alpha.1", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.9"

[package.metadata.pyo3-pack]
classifier = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
